refactor: refactor shouldRaiseIfIvieWonTheFirstRoundLostSecondRoundAndHaveAManilha test to use mock