@@ -479,11 +479,9 @@ public class PatoBotTest {
     @Test
     @DisplayName("Should raise if I've won the first round, lost second round and have a 'Manilha'")
     public void shouldRaiseIfIvieWonTheFirstRoundLostSecondRoundAndHaveAManilha() {
-        TrucoCard card1 = TrucoCard.of(CardRank.ACE, CardSuit.DIAMONDS);
-        TrucoCard vira = TrucoCard.of(CardRank.KING, CardSuit.DIAMONDS);
-        when(intel.getVira()).thenReturn(vira);
-        when(intel.getCards()).thenReturn(Collections.singletonList(card1));
-        when(intel.getRoundResults()).thenReturn(List.of(GameIntel.RoundResult.WON, GameIntel.RoundResult.LOST));
+        card1 = TrucoCard.of(CardRank.ACE, CardSuit.DIAMONDS);
+        vira = TrucoCard.of(CardRank.KING, CardSuit.DIAMONDS);
+        setupCardsViraAndRoundResult(Collections.singletonList(card1), vira, List.of(GameIntel.RoundResult.WON, GameIntel.RoundResult.LOST));
         assertTrue(patoBot.decideIfRaises(intel));
     }
 
